--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,5 @@
-.App {
+/* .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
 }
 
 .App-header {
@@ -23,10 +17,6 @@
   color: #61dafb;
 }
 
-.nav-item {
-  color:red;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -34,4 +24,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
