--- a/frontend/src/components/Jumbotron/styles.css
+++ b/frontend/src/components/Jumbotron/styles.css
@@ -27,7 +27,7 @@
 
 .carousel-caption {
     display: none; /* HIDDEN */
-    background: rgba(0, 0, 0, .4);
+    /* background: rgba(0, 0, 0, .4); */
     left: 0;
     width: 100%;
 }
