Added some styles to Register, Login and Add Product

--- a/frontend/src/app/App.css
+++ b/frontend/src/app/App.css
@@ -47,6 +47,11 @@ h2 {
   border-color: #27883e;
 }
 
+.form-container {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
 .form-control {
   border-radius: 0;
 }
